sgd/reproduction/playground/objects/SVMXC__Service_Contract_Products__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Installed products, part numbers, or groups of products entitled by this service contract.</description>
    <fields>
        <fullName>SMAX_PS_Cost__c</fullName>
        <label>契約計画原価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Exclude_SAP_IF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP連携対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Initial_Contract_Date__c</fullName>
        <formula>SVMXC__Installed_Product__r.SMAX_PS_Initial_Contract_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>初回契約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemText__c</fullName>
        <label>品目テキスト</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAPContractDetailNo__c</fullName>
        <label>SAP契約明細番号</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAPServiceMatNo__c</fullName>
        <label>SAPサービス品目</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>70099</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Serial__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Serial_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HGS No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date__c</fullName>
        <description>End date of service contract/warranty at the time of entitlement</description>
        <inlineHelpText>End date of service contract/warranty at the time of entitlement</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Exchange_Type__c</fullName>
        <description>Type of exchange allowed as per the service contract line. This overrides the exchange type set in the Service Contract</description>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the installed product covered by the service contract. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Name of the installed product covered by the service contract. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzdkEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Price__c</fullName>
        <label>Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Notes__c</fullName>
        <description>Additional information about entitlement by this product/group of products.</description>
        <inlineHelpText>Additional information about entitlement by this product/group of products.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_PMs_Delivered__c</fullName>
        <description>Number of preventive maintenance work orders completed for this product so far. Calculated automatically when PM work orders are closed</description>
        <label>Number Of PMs Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Family__c</fullName>
        <description>Product Family covered by this service contract.</description>
        <inlineHelpText>Product Family covered by this service contract.</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Latitude</fullName>
                </value>
                <value>
                    <fullName>OptiPlex</fullName>
                </value>
                <value>
                    <fullName>PowerConnect</fullName>
                </value>
                <value>
                    <fullName>PowerEdge</fullName>
                </value>
                <value>
                    <fullName>PowerVault</fullName>
                </value>
                <value>
                    <fullName>Precision</fullName>
                </value>
                <value>
                    <fullName>Vostro</fullName>
                </value>
                <value>
                    <fullName>XPS</fullName>
                </value>
                <value>
                    <fullName>Antivirus</fullName>
                </value>
                <value>
                    <fullName>Recovery</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>Operating System</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <description>Product Line covered by this service contract.</description>
        <inlineHelpText>Product Line covered by this service contract.</inlineHelpText>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product covered by the service contract. Is a lookup to an existing salesforce product record</description>
        <inlineHelpText>Name of the product covered by the service contract. Is a lookup to an existing salesforce product record</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N70000001hzcyEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</description>
        <inlineHelpText>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipName>Covered_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <description>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</description>
        <inlineHelpText>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</inlineHelpText>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>R00N70000001hzdaEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date__c</fullName>
        <description>Start date of service contract/warranty at the time of entitlement</description>
        <inlineHelpText>Start date of service contract/warranty at the time of entitlement</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Covered Product</label>
    <nameField>
        <displayFormat>SCPN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covered Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Required_IP_or_Product</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( SVMXC__Product__c = null, SVMXC__Installed_Product__c =null), true, false)</errorConditionFormula>
        <errorMessage>Installed Productもしくは製品を設定ください。</errorMessage>
    </validationRules>
</CustomObject>